stage4-status.txt
Stage 4 diagnostics
data_status=0
ui_status=1
build_status=99

--- data patch ---
Structured maintenance component-list data stage 4 patch completed successfully.

--- UI patch ---
  File "/home/runner/work/-AlhadiCMMSKotlin/-AlhadiCMMSKotlin/scripts/app3_assets_stage4_ui.py", line 703
    detail_call_end = assets_segment.find("
                                          ^
SyntaxError: unterminated string literal (detected at line 703)

--- build ---
Build was not started because a patch step failed.
